<resources>
    <string name="app_name">Taste&amp;Flavor</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <string name="login">Bienvenido</string>
    <string name="emailLogin">Correo electrónico</string>
    <string name="passwordLogin">Contraseña</string>
    <string name="google">Conectar con Goocle</string>


    <string name="logup"><u>Registrarse</u></string>
    <string name="Profile">Mi perfil</string>
    <string name="Favorite">Favoritos</string>
    <string name="Setting">Configuración</string>
    <string name="logout">Cerrar sesión</string>
    <string name="Communicate">Información</string>
    <string name="about">Acerca de Nosotros</string>

    <string name="descryption">Con Taste and Flavors puedes encontrar los mejores sitios
        de tu entorno para disfrutar de tu comida preferida; Podrás saber inmediatamente
        cuáles son los mejores sitios en cuestión de instantes y además podrás ayudar a
        otras personas mediante tus opiniones y las fotos de esos lugares que más te gustan.</string>
    <string name="Main">Principal</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
